# BioStructureHub

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  main.yml
about/: index.html
blog/: index.html
cite/: index.html
contact/: index.html
docs/: about.md  cite.md  contact.md  index.md  projects.md  resources.md  services.md  tutorials.md  tutorials_alphafold.md
docs/resources/: learning.md  methods.md
docs/services/: collab.md  service.md  teaching.md
docs/stylesheets/: extra.css
docs/tutorials/: tutorial_AF_bwVisu.md  tutorial_Bindcraft_bwVisu.md  tutorial_Boltz_bwVisu.md  tutorial_Boltzgen_bwVisu.md  (+2 more)
environments/: README.md  afold3.environment.yml  bindcraft.environment.yml  boltz.environment.yml  boltzgen.environment.yml  molecular_dynamics.yml
notebooks/: AFold_Alignment_CPU.ipynb  AFold_Confidence_Levels.ipynb  AFold_Diffusion_GPU.ipynb  Boltz_w_mmseqs.ipynb  Molecular_Dynamics.ipynb  RFDiffusion.ipynb  bindcraft.ipynb  boltz_confidence_levels.ipynb  boltz_input.ipynb  boltzgen.ipynb  conftest.py
projects/: index.html
resources/: index.html
search/: search_index.json
services/: index.html
tests/: afold_alignment_output.py  afold_diffusion_output.py  afold_prepare_analysis.py  bindcraft_output.py  boltz_output.py  boltz_prepare_analysis.py  boltz_prepare_run.py  boltzgen_output.py  conftest.py  prepare_md.py  rfdiffusion_output.py  utils.py
tutorials/: index.html
tutorials_alphafold/: index.html
(+58 files in other folders)
